test/testdata/classes/methods/init/missing_3_args_error.lox
class Foo {
  init(a, b, c) {
    print a + b + c;
  }
}

Foo(); // error: Foo() missing 3 arguments: a, b, and c
